# QuantumAnnealerModule

./: .gitignore  LICENSE  README.md  Readme.md  __init__.py  changes.txt  problems.txt  pyproject.toml  requirements.txt
Inference/: .env  .env.fast  __init__.py  comparison.py  dataset_manager.py  experiments.py  logger.py  main.py  plot.py  prompt.md  test_comparison_SZPvsTorch.py  test_datasetsUCI.py  test_matrix_xor.py  test_sim_vs_qpu.py  test_xor.py  test_xor_network.py  utils.py
Inference/paper/: tqe.tex  (+4 more)
IsingModule/: FullIsingModule.py  __init__.py  annealers.py  data_.py  full_ising_module.py  utils.py
ModularNetwork/: Network_1L.py  Network_2L.py  __init__.py
NeuralNetwork/: __init__.py  modular_network.py
NeuralNetworkIsing/: NeuralNetIsing.py
SZP_Model/: __init__.py  exact_model.py  model.py  utils.py
TorchIsingModule/: data_.py
confronto/: analyze_xor_results.py
plots_20260505_220949/: metrics_per_fold.csv  metrics_summary.csv
plots_20260505_221931/: metrics_per_fold.csv  metrics_summary.csv
plots_20260521_210214/: metrics_per_fold.csv
plots_20260521_210303/: metrics_summary.csv
plots_Balanced/: metrics_per_fold.csv
plots_Balanced_OLD/: metrics_summary.csv
plots_UnBalanced/: metrics_per_fold.csv
plots_UnBalanced_OLD/: metrics_per_fold.csv
plots_iris_matrix_20260318_100120/: best_val_matrix.csv  detailed_metrics.csv  timing_matrix.csv
plots_xor_20260131_175331/: logs.txt
plots_xor_20260131_175532/: logs.txt
plots_xor_compare_20260521_211333/: metrics_summary.csv
plots_xor_compare_20260521_211605/: metrics_summary.csv
(+131 files in other folders)
